Refactor task display and management: add delete functionality and improve UI elements

--- a/tasks.json
+++ b/tasks.json
@@ -1,22 +1,6 @@
 [
   {
-    "task": "sample",
-    "completed": true
-  },
-  {
-    "task": "workout",
-    "completed": true
-  },
-  {
-    "task": "sample 1",
-    "completed": true
-  },
-  {
-    "task": "workout",
-    "completed": true
-  },
-  {
-    "task": "sample",
-    "completed": true
+    "task": "Read a book",
+    "completed": false
   }
 ]
